--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
